# BIA-CellHashtag

./: .gitignore  CLAUDE.md  DEMO.ipynb  README.md  groupmeeting.md  pyproject.toml
cellhashtag/: _Agent.py  __init__.py  _prompts.py
cellhashtag/utils/: __init__.py
data/: example.h5ad  pbmc3k.h5ad
docs/api/: index.md
docs/api/deepagent/: SUMMARY.md  a2a.md  acp.md  async-subagents.md  backends.md  comparison.md  content-builder.md  context-engineering.md  customization.md  data-locations.md  deep-research.md  deploy.md  event-streaming.md  going-to-production.md  harness.md  human-in-the-loop.md  index.md  interpreters.md  mcp.md  memory.md  middleware.md  models.md  overview.md  permissions.md  profiles.md  quickstart.md  sandboxes.md  skills.md  streaming.md  subagents.md
docs/api/langchain/: SUMMARY.md  deploy.md  (+31 more)
evals/: DESIGN.md  FIXTURE_SPEC.md  README.md  conftest.py  run_evals.py
evals/judges/: adversarial_annotation.py
evals/rubrics/: annotation.yaml  ca_aa.yaml  cluster_quality.yaml  mcts.yaml  tool_use.yaml
evals/scorers/: __init__.py  annotation.py  ca_aa.py  cluster_quality.py  mcts.py  tool_use.py
examples/: DEMO.ipynb  DEMO_v2.ipynb  basic_usage.py
local_refine/: v2_redesign_plan.md
local_tests/: Test.ipynb
notebooks/: 01_dag_mcts_math.ipynb  02_dag_mcts_workflow.ipynb
scripts/: generate_mock_h5ad.py
src/cellhashtag/: __init__.py  agent.py  state.py
tests/: test.ipynb  test_cache.py  test_cellwiki.py  test_clustering.py  test_clustering_quality.py  test_config.py  test_format_conversion.py  test_orchestrator.py  test_utils.py
(+335 files in other folders)
