[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellhashtag"
version = "3.0.0.dev0"
description = "LLM-based single-cell annotation agent with LATS tree search"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "anndata>=0.10",
    "scanpy>=1.9",
    "scikit-learn>=1.3",
    "python-igraph>=0.11",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
deepagents = ["deepagents"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
plot = ["matplotlib>=3.7", "seaborn>=0.13"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/cellhashtag/skills"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
